feat: add server url save button

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "SEE LICENSE IN LICENSE.txt",
   "repository": "https://github.com/mymonero/mymonero-android-js",
   "scripts": {
+    "dev": "(webpack --mode=development) & node server",
     "start": "(webpack --mode=development) & node server",
     "build": "webpack --mode=production --config webpack.config.js",
     "update-android": "npx cap sync; npx cap open android",
@@ -22,6 +23,7 @@
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.15.0",
+    "@braintree/sanitize-url": "^6.0.0",
     "@capacitor/android": "^3.0.0",
     "@capacitor/app": "^1.1.0",
     "@capacitor/browser": "^1.0.7",
@@ -41,13 +43,13 @@
     "@mymonero/mymonero-bridge-utils": "^1.1.15",
     "@mymonero/mymonero-exchange": "^1.1.17",
     "@mymonero/mymonero-exchange-helper": "^1.4.1",
-    "@mymonero/mymonero-hosted-api": "^1.1.5",
+    "@mymonero/mymonero-hosted-api": "^2.0.2",
     "@mymonero/mymonero-keyimage-cache": "^1.0.5",
     "@mymonero/mymonero-locales": "^2.0.2",
     "@mymonero/mymonero-monero-client": "^1.4.1",
     "@mymonero/mymonero-monero-config": "^1.4.2",
     "@mymonero/mymonero-money-format": "^1.4.2",
-    "@mymonero/mymonero-net-service-utils": "^1.0.5",
+    "@mymonero/mymonero-net-service-utils": "^2.0.2",
     "@mymonero/mymonero-nettype": "^1.1.15",
     "@mymonero/mymonero-page-templates": "^2.1.4",
     "@mymonero/mymonero-paymentid-utils": "^1.0.5",
