--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -52,11 +52,11 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>The MyMonero app uses your device&apos;s camera to scan physical Monero Payment Request QR codes.</string>
+	<string>The MyMonero app uses your device's camera to scan physical Monero Payment Request QR codes.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>The MyMonero app uses your device&apos;s photos album to save and to open Monero Payment Request QR code image files.</string>
+	<string>The MyMonero app uses your device's photos album to save and to open Monero Payment Request QR code image files.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>The MyMonero app uses your device&apos;s photos album to save and to open Monero Payment Request QR code image files.</string>
+	<string>The MyMonero app uses your device's photos album to save and to open Monero Payment Request QR code image files.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
